@@ -11,6 +11,7 @@
 @ELM_WIN32_DEF@ ELM_WIN32
 @ELM_WINCE_DEF@ ELM_WINCE
 @ELM_EDBUS_DEF@ ELM_EDBUS
+@ELM_EDBUS2_DEF@ ELM_EDBUS2
 @ELM_EFREET_DEF@ ELM_EFREET
 @ELM_ETHUMB_DEF@ ELM_ETHUMB
 @ELM_WEB_DEF@ ELM_WEB
@@ -75,6 +76,9 @@
 
 #ifdef ELM_EDBUS
 #include <E_DBus.h>
+#endif
+#ifdef ELM_EDBUS
+#include <EDBus.h>
 #endif
 
 #ifdef ELM_EFREET
